# TaneClient-BE

./: CMakeLists.txt  README.md
include/: Offsets.h
resources/launcher/: PayloadResource.rc.in
resources/payload/: PayloadLogoResource.rc.in
scripts/: build.ps1
src/Camera/: FreeLook.cpp  Zoom.cpp
src/GUI/: ArrowCounter.cpp  CPS.cpp  ControllerOverlay.cpp  EffectHUD.cpp  EffectHUDRender.cpp  EffectHUDResources.cpp  FPS.cpp  ItemHUD.cpp  ItemHUDCache.cpp  ItemHUDConfig.cpp  ItemHUDRender.cpp  ItemHUDResolve.cpp  KeyStroke.cpp  Ping.cpp  PotCounter.cpp  Tab.cpp  TabInput.cpp  TabPlayers.cpp
src/ImGui/: InputBlock.cpp  Menu.cpp  MenuMainWindows.cpp  MenuModuleList.cpp  MenuNavigation.cpp  MenuNavigationState.cpp  MenuNavigationWindows.cpp  MenuPositionEditor.cpp  MenuPositionEditorLayout.cpp  MenuPositionEditorPreviews.cpp  MenuSettings.cpp  MenuSettingsCamera.cpp  MenuSettingsCommon.cpp  MenuSettingsGui.cpp  MenuState.cpp  MenuStateConfig.cpp  MenuStateInput.cpp  MenuWidgets.cpp  MenuWindows.cpp
src/Movement/: AutoSprint.cpp
src/Patch/: ForceCloseOreUI.cpp
src/Render/: Fullbright.cpp  Hitbox.cpp  NameTags.cpp  NoFog.cpp  Tracer.cpp
src/launcher/: LauncherApp.cpp  LauncherGraphics.cpp  LauncherInjection.cpp  LauncherUi.cpp  Main.cpp
src/payload/: D3D11ImGuiBackend.cpp  D3D11ImGuiExternalTextures.cpp  D3D11ImGuiHook.cpp  D3D11ImGuiInput.cpp  D3D11ImGuiResourceLoading.cpp  D3D11ImGuiResources.cpp  D3D11ImGuiTextureBackends.cpp  DllMain.cpp
